--- a/app/views/syllogisms/index.html.erb
+++ b/app/views/syllogisms/index.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<div id='syllogisms-list'>
 <h1>Syllogisms</h1>
 
 
@@ -27,5 +28,14 @@
     <% end %>
   </tbody>
 </table>
+</div>
+
+<div id='about'>
+  <h2>How to use this website</h2>
+  <p>A syllogism (Greek: συλλογισμός syllogismos, "conclusion, inference") is a kind of logical argument that applies deductive reasoning to arrive at a conclusion based on two or more propositions that are asserted or assumed to be true.</p>
+  <p>Here, you can lay out your arguments step-by-step, syllogism-style, or view the arguements of others.</p>
+  <p>The app currently only supports if-then and solo statements. To use a "quality" premise such as "all _ are _," you can use a symbol or variable (e.g. "x is") in place of "all _ are."</p>
+  <p>The app also currently doesn't allow editing of syllogisms, so make sure you are happy with your argument before you save!</p>
+</div>
 
 <br>
