edited show wording

--- a/app/views/syllogisms/show.html.erb
+++ b/app/views/syllogisms/show.html.erb
@@ -16,7 +16,7 @@
     <% if premise[0]=="4576" %>
     <p> the statement <strong><%=premise[2]%></strong> is <strong><%=premise[3]%></strong> </p>
     <% else %>
-    <p> if the statement <strong><%=premise[0]%></strong> is <strong><%=premise[1]%></strong> then the statement <strong><%=premise[2]%></strong> is <strong><%=premise[3]%></strong> </p>
+    <p> if the statement <strong><%=premise[0]%></strong> were <strong><%=premise[1]%></strong> then the statement <strong><%=premise[2]%></strong> would be <strong><%=premise[3]%></strong> </p>
     <% end %>
   <% end %>
 
