--- a/app/views/syllogisms/index.html.erb
+++ b/app/views/syllogisms/index.html.erb
@@ -1,10 +1,10 @@
 <p id="notice"><%= notice %></p>
 
 <div id='syllogisms-list'>
-<h1>Syllogisms</h1>
+<h2>Syllogisms</h2>
 
 
-<%= link_to 'make your argument', new_syllogism_path, :id => "new_syllogism" %>
+<%= link_to 'make your argument', new_syllogism_path, :id => "new_syllogism_button" %>
 
 <table id='center-table'>
   <thead>
