--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -14,40 +14,27 @@ p, ol, ul, td {
   margin: 33px;
 }
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
+// pre {
+//   background-color: #eee;
+//   padding: 10px;
+//   font-size: 11px;
+// }
 
-a {
-  color: #000;
-
-  &:visited {
-    color: #666;
-  }
-
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
-
-th {
-  padding-bottom: 5px;
-}
+// th {
+//   padding-bottom: 5px;
+// }
 
 td {
-  padding-bottom: 7px;
+  padding-top: 10px;
   padding-left: 5px;
   padding-right: 5px;
 }
 
-div {
-  &.field, &.actions {
-    margin-bottom: 10px;
-  }
-}
+// div {
+//   &.field, &.actions {
+//     margin-bottom: 10px;
+//   }
+// }
 
 #notice {
   color: green;
@@ -84,6 +71,6 @@ div {
   }
 }
 
-label {
-  display: block;
-}
+// label {
+//   display: block;
+// }
